--- a/Index.html
+++ b/Index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="style/Style.css" rel="stylesheet">
-    <title>Document</title>
+    <title>Multiplicador</title>
 </head>
 
 <body>
