--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="style/Style.css" rel="stylesheet">
-    <title>Multiplicador</title>
+    <title>Document</title>
 </head>
 
 <body>
@@ -19,20 +19,19 @@
             <a href="#">Contato</a>
         </nav>
     </header>
-    <!--menu-->
 
     <section class='Banner'>
         <img class="seta-r" src="imagens/proximo-e.png">
         <div class="center">
             <img class="logo" src="imagens/title.png">
-            </br>
-            <button>Quero ser multiplicador</button>
+            <div class="bt">
+                <button>Quero ser multiplicador</button>
+            </div>
         </div>
-
         <img class="seta-l" src="imagens/proximo.png">
     </section>
-    <!--banner-->
-    <section class="info">
+
+    <section class="info a">
         <div class="icon">
             <img src="imagens/quem somos simb.png">
             <h1>Quem somos</h1>
@@ -67,8 +66,6 @@
                 defasados nas matérias.
             </p>
         </div>
-        <br>
-        <button>Quero ser multiplicador</button>
     </section>
 
     <section class="info historia">
@@ -87,8 +84,9 @@
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
             allowfullscreen></iframe>
         <br>
-        <button>Quero ser multiplicador</button>
+        <button id="historia-b">Quero ser multiplicador</button>
     </section>
+
     <footer>
         <img id='faetec' src="imagens/faetec.png">
         <div class="rede">
@@ -98,7 +96,6 @@
             <img src="imagens/youtube (1).png">
         </div>
     </footer>
-
 
 </body>
 
