--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="Style/Style.css" rel="stylesheet">
-    <title>Document</title>
+    <title>Multiplicador</title>
 </head>
 
 <body>
@@ -71,10 +71,14 @@
     <section class="info historia">
         <div class="icon">
             <img src="imagens/história simbol.png">
-            <h1>Propósito</h1>
+            <h1>Nossa História</h1>
             <p>
-                Eliminar a defasagem dosalunos nas matérias na rede Faetec, capacitando e estimulando os próprios alunos
-                a ajudarem uns aos outros.
+                Nasceu em 2019 e o seu objetivo é atender uma dor, uma necessidade, presente na nossa escola, sendo a
+                enorme dificuldade de muitos alunos nasmatérias da formação geral e também da formação técnica.
+                </br>
+                E hoje o projeto tem ganhado um novo estilo, um novo formato e a gente não vai mais se limitar apenas ao
+                presencial e muito menos se limitar as matérias escolares, porque estamos buscando novos talentos, novos
+                conhecimentos e explorando novos mercados.
             </p>
             <br>
             <h2>Veja um vídeo rápido contando mais sobre nós:</h2>
